--- a/package.json
+++ b/package.json
@@ -1,6 +1,4 @@
 {
-  "name": "expressmvc",
-  "subdomain": "expressmvc",
   "scripts": {
     "start": "src/app.js"
   },
@@ -10,7 +8,16 @@
     "qs": ">= 0.3.1",
     "mkdirp": "0.0.7",
     "formidable": "*",
-    "ejs": "*"
+    "ejs": "*",
+    "mongoose": "*",
+    "mongodb": "*",
+    "hooks": "*",
+    "jade": "*",
+    "express": "*",
+    "passport": "*",
+    "passport-facebook": "*",
+    "passport-oauth": "*",
+    "oauth": "0.9.5"
   },
   "devDependencies": {
     "connect-form": "0.2.1",
@@ -22,7 +29,19 @@
     "should": "0.3.2",
     "express-messages": "0.0.2",
     "node-markdown": ">= 0.0.1",
-    "connect-redis": ">= 0.0.1"
+    "connect-redis": ">= 0.0.1",
+    "oauth": "0.9.5"
   },
-  "version": "0.0.0-1"
+  "name": "cashtracker",
+  "subdomain": "cashtracker",
+  "version": "0.0.0-3",
+  "repository": {},
+  "env": {
+    "SUBDOMAIN": "cashtracker",
+    "NODE_ENV": "production"
+  },
+  "domains": [],
+  "databases": {},
+  "ctime": 1324141329476,
+  "mtime": 1324141512604
 }
