--- a/package.json
+++ b/package.json
@@ -17,7 +17,13 @@
     "passport": "*",
     "passport-facebook": "*",
     "passport-oauth": "*",
-    "oauth": "0.9.5"
+    "oauth": "0.9.5",
+    "everyauth": "*",
+    "restler": "*",
+    "yaml": "*",
+    "xml2js": "*",
+    "sax": "*",
+    "growl": "*"
   },
   "devDependencies": {
     "connect-form": "0.2.1",
@@ -34,7 +40,7 @@
   },
   "name": "cashtracker",
   "subdomain": "cashtracker",
-  "version": "0.0.0-3",
+  "version": "0.0.0-12",
   "repository": {},
   "env": {
     "SUBDOMAIN": "cashtracker",
@@ -43,5 +49,5 @@
   "domains": [],
   "databases": {},
   "ctime": 1324141329476,
-  "mtime": 1324141512604
+  "mtime": 1324158550197
 }
