--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "connect-form": "0.2.1",
     "ejs": "0.4.2",
+    "express": "*",
     "expresso": "0.9.2",
     "hamljs": "0.5.1",
     "jade": "0.16.2",
@@ -40,7 +41,7 @@
   },
   "name": "cashtracker",
   "subdomain": "cashtracker",
-  "version": "0.0.0-12",
+  "version": "0.0.0-18",
   "repository": {},
   "env": {
     "SUBDOMAIN": "cashtracker",
