--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "scripts": {
-    "start": "src/app.js",
+    "start": "src/js/app.js",
     "test": "vows test/* --spec"
   },
   "dependencies": {
     "connect": "1.8.x",
+    "coffee-script": "1.2.0",
     "mime": ">= 0.0.1",
     "qs": ">= 0.3.1",
     "mkdirp": "0.0.7",
@@ -32,6 +33,7 @@
     "async": "*"
   },
   "devDependencies": {
+    "coffee-script": "1.2.0",
     "connect-form": "0.2.1",
     "ejs": "0.4.2",
     "express": "*",
