--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
   },
   "name": "cashtracker",
   "subdomain": "cashtracker",
-  "version": "0.0.1-7",
+  "version": "0.0.2",
   "repository": {},
   "env": {
     "SUBDOMAIN": "cashtracker",
