--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "mongodb": "*",
     "hooks": "*",
     "jade": "*",
-    "express": "*",
+    "express": "2.5.11",
     "passport": "*",
     "passport-facebook": "*",
     "passport-oauth": "*",
@@ -38,7 +38,6 @@
     "coffee-script": "1.2.0",
     "connect-form": "0.2.1",
     "ejs": "0.4.2",
-    "express": "*",
     "expresso": "0.9.2",
     "hamljs": "0.5.1",
     "jade": "0.16.2",
